crates/cargo-add/tests/snapshots/add/invalid_manifest.stderr
Error: failed to parse manifest at `[ROOT]/case/Cargo.toml`

Caused by:
    0: could not parse input as TOML
    1: TOML parse error at line 8, column 7
         |
       8 | key = invalid-value
         |       ^
       Unexpected `v`
       
